--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ rvm:
 addons:
   code_climate:
     repo_token: 5b5c9617f7250055e1b48d7f1297c5b36a6861d9431607a8b310dc22dc046ba8
+    
+bundler_args: --without development
 
 notifications:
   email:
